competitions/middle-school-teaser-2021/kube/fesbuc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fesbuc-svc
  namespace: challenges
  labels:
    app: fesbuc
spec:
  type: LoadBalancer
  ports:
  - port: 8002
    targetPort: 8000
    protocol: TCP
  selector:
    app: fesbuc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fesbuc-svc
  namespace: challenges
  labels:
    app: fesbuc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fesbuc
  template:
    metadata:
      labels:
        app: fesbuc
    spec:
      containers:
      - name: fesbuc
        image: facebook-django-377491353
        ports:
        - containerPort: 8000
        imagePullPolicy: Never
        securityContext:
          runAsUser: 0
      imagePullSecrets:
      - name: regcred
