competitions/middle-school-teaser-2021/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: challenge-ingress
  namespace: challenges
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/ingress.global-static-ip-name: 34.125.64.174
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: 'true'
spec:
  tls:
  - hosts:
    - fesbuc.ctf.test
    - fred-shared-server.ctf.test
    - chal-host.ctf.test
    secretName: chalgen-cert-secret
  rules:
  - host: fesbuc.ctf.test
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: fesbuc-svc
            port:
              number: 8000
  - host: fred-shared-server.ctf.test
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: fred-shared-server-svc
            port:
              number: 8000
  - host: chal-host.ctf.test
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: chal-host-svc
            port:
              number: 8000
